--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<html>Hello World</html>
+<!DOCTYPE html>
+<html lang="pt"> Hello World
+  <head>
+    <meta charset="UTF-8">
+    <title>Document</title>
+  </head>
+  <body>
+
+  </body>
+</html>
