--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="pt"> Hello World 1
+<html lang="pt"> Hello World 
   <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>TPC 1</title>
   </head>
   <body>
-
+    Nome:Diogo Furtado
+    Numero: 30003503
+    Engenharia Informatica
+    3º ano
+    Turno Diurno
   </body>
 </html>
