--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>TPC 1</title>
   </head>
   <body>
-    Nome:Diogo Furtado
+    <h1>Nome:Diogo Furtado</h1>
     Numero: 30003503
     Engenharia Informatica
     3º ano
