--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
-<!DOCTYPE html>
-<html lang="pt"> Hello World 
+<html lang="pt"> 
+  <h1> Hello World </h1>
   <head>
-    <meta charset="UTF-8">
     <title>TPC 1</title>
   </head>
   <body>
-    <h1>Nome:Diogo Furtado</h1>
-    Numero: 30003503
-    Engenharia Informatica
-    3º ano
-    Turno Diurno
+    <h3>Nome:Diogo Furtado</h3>
+    <h3>Numero: 30003503</h3>
+    <h3>Engenharia Informatica</h3>
+    <h3>3º ano</h3>
+    <h3>Turno Diurno</h3>
   </body>
 </html>
