--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html lang="pt"> 
   <h1> Hello World </h1>
+  <h1> Minha página </h1>
+  <h3>Está é a pagina principal do site do Diogo Furtado</h3>
   <head>
     <title>TPC 1</title>
   </head>
   <body>
-    <h3>Nome:Diogo Furtado</h3>
     <h3>Numero: 30003503</h3>
     <h3>Engenharia Informatica</h3>
     <h3>3º ano</h3>
