--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="pt"> 
   <h1> Hello World </h1>
-  <h1><p style="color:#FF00FF";>Minha página</p></h1>
+  <h1><p style="color:#0000FF";>Minha página</p></h1>
   <h3>Está é a pagina principal do site do Diogo Furtado</h3>
   <head>
     <title>TPC 1</title>
