--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				</li>
 			</ul>
 		</div>
-		<button class="navbar-toggler navbar-toggler-center" type="button"
+		<button class="navbar-toggler navbar-toggler-right" type="button"
 					   data-toggle="collapse" data-target="#navbarResponsive">
 					   <span class="navbar-toggler-icon"></span>
 		</button>
