--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<a class="nav-link" href="#sponsors">Gestão de projetos</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#sobre">Gestão de sismtemas e redes</a>
+					<a class="nav-link" href="#sobre">Gestão de sistemas e redes</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#sobre">Sistemas distribuidos e paralelos</a>
